Add /pipelines/rename to rename pipelines
